k8s-gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cedarfix-ingress
  namespace: cedarfix
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: cedarfix-ip
    networking.gke.io/managed-certificates: cedarfix-cert
spec:
  rules:
    - host: cedarfix.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
